src/objects/Contract_Relation__c.object
<CustomObject>
    <description>Stores the many-to-many relation between Contracts and Leads &amp; Cases.</description>
    <fields>
        <fullName>Case_Key__c</fullName>
        <formula>HYPERLINK(&quot;javascript:if(typeof(srcUp)==&apos;function&apos;) {srcUp(&apos;/&quot; &amp; Id &amp; &quot;?isdtp=vw&apos;);}&quot;+ &quot; else {window.location.href=&apos;/&quot; &amp; Id &amp; &quot;?isdtp=vw&apos;}&quot;,  Case_No__r.FOS_Case_Number__c , &quot;_self&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FOS Case Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_No__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CRM1 Case No.</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Contract Relations</relationshipLabel>
        <relationshipName>Contract_Relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Key__c</fullName>
        <formula>HYPERLINK(&quot;javascript:if(typeof(srcUp)==&apos;function&apos;) {srcUp(&apos;/&quot; &amp; Id &amp; &quot;?isdtp=vw&apos;);}&quot;+ &quot; else {window.location.href=&apos;/&quot; &amp; Id &amp; &quot;?isdtp=vw&apos;}&quot;, Contract__r.ContractNumber__c , &quot;_self&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CMS Contract No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CRM1 Contract</label>
        <referenceTo>Retail_Task__c</referenceTo>
        <relationshipLabel>Contract Relations</relationshipLabel>
        <relationshipName>Contract_Relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Contract Relations</relationshipLabel>
        <relationshipName>Contract_Relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>CMS Contracts Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>Text( Case_No__r.Status )</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <label>Contract Relation</label>
    <nameField>
        <label>Contract Relation</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Relations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>